--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script  defer type="text/javascript" src="app.js"></script>
-	<title>Project4</title>
+	<title>Magic</title>
 </head>
 <body class="light">
 	<nav class="navbar">
