--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</nav>
 
 	<header>
-		<img src="magic.png">
+		<img src="magic.png" alt="magic fire">
 		<h1>Magic of the Science<br>will led you in Advantures</h1>
 		<p>Join us</p>
 	</header>
@@ -90,18 +90,18 @@
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 	<div class="grid">
-		<div class="grid-child"><img src="Knight-icon.png"><div class="circle"></div><h3>Knight</h3></div>
-		<div class="grid-child"><img src="Sorceress-Witch-icon.png"><div class="circle"></div><h3>Witch</h3></div>
-		<div class="grid-child"><img src="Spell-Book-icon.png"><div class="circle"></div><h3>Spell Book</h3></div>
+		<div class="grid-child"><img src="Knight-icon.png" alt="knight"><div class="circle"></div><h3>Knight</h3></div>
+		<div class="grid-child"><img src="Sorceress-Witch-icon.png" alt="witch"><div class="circle"></div><h3>Witch</h3></div>
+		<div class="grid-child"><img src="Spell-Book-icon.png" alt="spell book"><div class="circle"></div><h3>Spell Book</h3></div>
 		<div class="grid-child">
-			<img src="Spell-Scroll-icon.png">
+			<img src="Spell-Scroll-icon.png" alt="scroll">
 			<div class="circle"></div><h3>Spell Scroll</h3>
 		</div>
-		<div class="grid-child"><img src="Armor-icon.png"><div class="circle"></div><h3>Armor</h3></div>
-		<div class="grid-child"><img src="helmet.png"><div class="circle"></div><h3>Helmet</h3></div>
-		<div class="grid-child"><img src="Bow-Arrow-icon.png"><div class="circle"></div><h3>Bow and Arrow</h3></div>
-		<div class="grid-child"><img src="Adventure-Map-icon.png"><div class="circle"></div><h3>Map</h3></div>
-		<div class="grid-child"><img src="Unicorn-icon.png"><div class="circle"></div><h3>Unicorn</h3></div>
+		<div class="grid-child"><img src="Armor-icon.png" alt="armor"><div class="circle"></div><h3>Armor</h3></div>
+		<div class="grid-child"><img src="helmet.png" alt="helmet"><div class="circle"></div><h3>Helmet</h3></div>
+		<div class="grid-child"><img src="Bow-Arrow-icon.png" alt="arrow"><div class="circle"></div><h3>Bow and Arrow</h3></div>
+		<div class="grid-child"><img src="Adventure-Map-icon.png" alt="map"><div class="circle"></div><h3>Map</h3></div>
+		<div class="grid-child"><img src="Unicorn-icon.png" alt="unicorn"><div class="circle"></div><h3>Unicorn</h3></div>
 	</div>
 
 	</main>
