--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="icon" href="Potion-icon.png">
-	<script  defer type="text/javascript" src="app.js"></script>
+	<script  defer src="app.js"></script>
 	<title>Magic</title>
 </head>
 <body class="light">
